--- a/Módulo 1/#03 tipos de dados/index.html
+++ b/Módulo 1/#03 tipos de dados/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Olá JavaScript</h1>
-
-    <script src="script.js" >
+    <script src="assets/js/script.js">
 
     </script>
 </body>
