--- a/Módulo 3/selecionando elementos 2/index.html
+++ b/Módulo 3/selecionando elementos 2/index.html
@@ -8,7 +8,17 @@
 <body>
     <h1>Olá JavaScript</h1>
     <div id="teste">
-        Bla bla bla
+        <ul>
+            <li>a</li>
+            <li>b</li>
+        </ul>
+    </div>
+
+    <div id="teste2">
+        <ul>
+            <li>c</li>
+            <li>d</li>
+        </ul>
     </div>
 
     <button class="botao">Clique</button>
