--- a/Módulo 3/#4 manipulando elementos 1/index.html
+++ b/Módulo 3/#4 manipulando elementos 1/index.html
@@ -12,6 +12,7 @@
             <li>a</li>
             <li>b</li>
         </ul>
+        <strong>testando</strong>
     </div>
 
     <div id="teste2">
